--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -2,10 +2,10 @@
 <!DOCTYPE HTML>
 <html>
 	<head> 
-		<title>BookHookUP</title>
+		<title>Word Fruit</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="{% static 'assets/css/main.css' %}" />
+		<link rel="stylesheet" href="{% static 'assets/css/main.css' %}"/>
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 		
 	</head>
@@ -18,7 +18,7 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1><a href="{% url 'library:homepage' %}">BookHookUP</a></h1>
+								<h1><a href="{% url 'library:homepage' %}">Word Fruit</a></h1>
 								<span>by Ritankar </span>
 							</div>
 
@@ -69,7 +69,7 @@
 											<li><a href="https://www.facebook.com/xritzx" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 											<li><a href="https://www.instagram.com/x_ritz_x" class="icon fa-instagram"><span class="label">Instagram</span></a></li>											
 										</ul>
-										<p>India WestBengal Kolkata<br />
+										<p>India WestBengal <br />
 										Habra @ Ritankar<br />
 										</p>
 									</section>
